--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.cart-item
+{
+  display: flex;
+  height: 200px;
+  width: 400px;
+}
+
+.left-block
+{
+  width: 40%;
+  border: 2px solid grey;
+  height: 100%;
+}
+
+.right-block
+{
+  width: 60%;
+  border: 2px solid mediumspringgreen;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.cart-item-actions
+{
+
+}
+
+.action-icons
+{
+  width:50px;
+  height:50px;
+  cursor: pointer;
+}
+
+.cart-container
+{
+  display: flex;
+  flex-direction: column;
+}
