--- a/src/index.css
+++ b/src/index.css
@@ -17,19 +17,20 @@ code {
   display: flex;
   height: 200px;
   width: 400px;
+  margin: 2%;
+  border:1px solid lightgray;
+  border-radius: 20px;
 }
 
 .left-block
 {
   width: 40%;
-  border: 2px solid grey;
   height: 100%;
 }
 
 .right-block
 {
   width: 60%;
-  border: 2px solid mediumspringgreen;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -42,13 +43,65 @@ code {
 
 .action-icons
 {
-  width:50px;
-  height:50px;
+  width: 35px;
+  height: 35px;
   cursor: pointer;
+  padding: 2%;
 }
 
 .cart-container
 {
   display: flex;
   flex-direction: column;
+}
+
+.navbar
+{
+  text-align: right;
+  height: 70px;
+  background:aquamarine;
+}
+
+.cart-icon-container
+{
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  width: 90px;
+}
+
+.cart-icon
+{
+  height: 50px;
+  padding: 10px;
+}
+
+.item-count
+{
+  background: deeppink;
+  border-radius: 23px;
+  padding: 6px;
+  color: white;
+  font-size: 18px;
+  text-align: left;
+  position: absolute;
+  left: 60%;
+  top: 0%;
+  font-weight: 800;
+}
+
+.cart-item-image
+{
+  margin: 3%;
+  height: 95%;
+  width: 95%;
+  border-radius: 10px;
+}
+
+.total-price
+{
+  font-size: 40px;
+  padding: 2%;
+  font-weight: bolder;
+  color:navy;
 }
